Добавлена пагинация, форма для отправки поста по email
Django 4 в примерах (глава 2)

--- a/config/.env-example
+++ b/config/.env-example
@@ -1,1 +1,4 @@
 SECRET_KEY = 'YOUR SECRET KEY'
+
+SMTP_EMAIL_HOST_USER = 'YOUR SMTP EMAIL HOST USER'
+SMTP_EMAIL_HOST_PASSWORD = 'YOUR SMTP EMAIL HOST PASSWORD'
